<resources>
    <string name="app_name">Counselling Admin</string>
    <string name="title_activity_blogs">Blogs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_videos">Videos</string>
    <string name="title_activity_chat">Chat</string>

    <string name="add_blog">Add blog to database</string>
    <string name="prompt_blog_category">Blog category</string>
    <string name="prompt_blog_title">Blog Title</string>
    <string name="prompt_blog_link">Link</string>

    <string name="add_video">Add video to database</string>
    <string name="prompt_video_title">Video Title</string>
    <string name="prompt_video_link">Link</string>

    <string name="add_button">Add to database</string>
    <string name="title_activity_counsellor">Counsellor</string>
    <string name="title_activity_counsellor_display">CounsellorDisplay</string>

    <string name="counsellor_name">Name:</string>
    <string name="counsellor_email">Email:</string>
    <string name="counsellor_address">Address:</string>
    <string name="counsellor_phone_number">Phone number:</string>
    <string name="title_activity_chat_display">ChatDisplay</string>
</resources>
